--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==3.2"
 gunicorn = "==20.0.4"
 psycopg2-binary = "*"
 dj-database-url = "==0.5.0"
+whitenoise = "==5.2.0"
 
 [dev-packages]
 
