--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,14 @@ gunicorn = "==20.0.4"
 psycopg2-binary = "*"
 dj-database-url = "==0.5.0"
 whitenoise = "==5.2.0"
+django-allauth = "*"
 
 [dev-packages]
+"flake8" = "*"
+black = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
